--- a/views/listLocations.ejs
+++ b/views/listLocations.ejs
@@ -11,9 +11,9 @@
             <td><%= index +1 %></td>
             <td><strong><%= item.title %></strong></td>
             <td>
-              <a href="<%= item.image %>" data-toggle="lightbox">
+              <a href="<%= item.thumbnail %>" data-toggle="lightbox">
                 <img
-                  src="<%= item.image %>"
+                  src="<%= item.thumbnail %>"
                   width="150"
                   height="100"
                   class="img-thumbnail"
