--- a/views/editCategory.ejs
+++ b/views/editCategory.ejs
@@ -17,9 +17,9 @@
           <input
             class="form-control"
             type="text"
-            name="image"
-            placeholder="Image"
-            value="<%= category.image %>"
+            name="thumbnail"
+            placeholder="Thumbnail"
+            value="<%= category.thumbnail %>"
           />
         </div>
         <div class="form-group">
