--- a/views/editLocation.ejs
+++ b/views/editLocation.ejs
@@ -17,9 +17,9 @@
           <input
             class="form-control"
             type="text"
-            name="image"
-            placeholder="Image"
-            value="<%= location.image %>"
+            name="thumbnail"
+            placeholder="Thumbnail"
+            value="<%= location.thumbnail %>"
           />
         </div>
         <div class="text-center">
