--- a/views/listCategories.ejs
+++ b/views/listCategories.ejs
@@ -62,8 +62,7 @@
             class="form-control"
             type="text"
             name="thumbnail"
-            placeholder="Image"
-            value="http://www.taylandgezi.com/wp-content/uploads/app/tn/"
+            placeholder="Thumbnail"
           />
         </div>
         <div class="form-group">
