--- a/views/listLocations.ejs
+++ b/views/listLocations.ejs
@@ -61,9 +61,8 @@
           <input
             class="form-control"
             type="text"
-            name="image"
-            placeholder="Image"
-            value="http://www.taylandgezi.com/wp-content/uploads/app/tn/"
+            name="thumbnail"
+            placeholder="Thumbnail"
           />
         </div>
         <div class="text-center">
